--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           const yourName = document.getElementById("yourName").value;
           const loverName = document.getElementById("loverName").value;
 
-          fetch("https://love-calculator-zluu.vercel.app//api/calculate-love", {
+          fetch("https://love-calculator-gbmh.vercel.app/api/calculate-love", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
